<resources>
    <string name="app_name">crud2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="profile">Profil</string>
    <string name="beranda">Beranda</string>
    <string name="pantauan">Pantauan</string>
    <string name="progress">Progress</string>
    <string name="riwayat">Riwayat</string>
    <string name="Tentang">Tentang Aplikasi</string>
    <string name="Keluar">Keluar</string>

    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="daftar">daftar</string>
    <string name="back_to_login">Back to Login</string>
    <string name="Delete">DELETE</string>
</resources>
