<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/beranda"
            android:title="@string/beranda" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/pantauan"
            android:title="@string/pantauan" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/progress"
            android:title="@string/progress" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/riwayat"
            android:title="@string/riwayat" />
    </group>

    <item android:title="___________">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/tentang"
                android:title="@string/Tentang" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/keluar"
                android:title="@string/Keluar" />
        </menu>
    </item>

</menu>
