<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/gradient"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <com.google.android.material.textfield.TextInputLayout
                app:errorEnabled="true"
                android:id="@+id/textInputLayoutUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:background="@drawable/roundtext" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/roundtext" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:background="@drawable/roundtext" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
               android:hint="Nomor Telpon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/notelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundtext" />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kecamatan" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kelurahan" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginLeft="80dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/rt"
                    android:layout_height="fill_parent"
                    android:layout_width="70dp"

                    android:hint="RT"
                    android:background="@drawable/roundtext"
                    android:layout_marginRight="10dp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_gravity="right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/rw"
                    android:layout_width="70dp"
                    android:layout_height="fill_parent"
                    android:hint="RW"
                    android:background="@drawable/roundtext"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_gravity="center"
                android:id="@+id/normh"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_width="100dp"
                android:hint="No Rumah"
                android:background="@drawable/roundtext" >
            </com.google.android.material.textfield.TextInputEditText>
            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="#d67601"
                android:text="Daftar"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/back_to_login"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </RelativeLayout>


    <TextView
        android:id="@+id/buttonRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center_horizontal"
        android:text="PENDAFTARAN"
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
